Corrects content overflow in platforms section

--- a/css/style.css
+++ b/css/style.css
@@ -803,7 +803,7 @@ body {
   .section__container {
     margin-top: 70px; }
   .section__progress .img__devices img {
-    width: 350px;
+    width: 300px;
     height: auto; }
   .section__img img {
     height: 300px; }
