--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -179,7 +179,7 @@
         &__progress {
             .img__devices {
                 img {
-                    width: 350px;
+                    width: 300px;
                     height: auto;
                 }
             }
